tests/unit/scaffolding/generate-resource-quota/generated-team-checkout.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resource-quota
  namespace: team-checkout
spec:
  hard:
    requests.cpu: "4"
    requests.memory: "8Gi"
    limits.cpu: "8"
    limits.memory: "16Gi"
