tests/unit/scaffolding/generate-resource-quota/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-checkout
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
