tests/unit/scaffolding/generate-resource-quota/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-resource-quota-test
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: generate-resource-quota
    isGeneratingPolicy: true
    kind: Namespace
    resources:
      - team-checkout
    generatedResources: generated-team-checkout.yaml
    result: pass
